# auto-sktime

./: .coveragerc  .gitmodules  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  setup.cfg  setup.py
autosktime/: __init__.py  automl.py  constants.py  skeleton.py  smbo.py
autosktime/data/: __init__.py  splitter.py
autosktime/data/benchmark/: __init__.py  base.py  cmapss.py  femto_bearing.py  filtration.py  m4.py  phm08.py  phme20.py  ppm.py  rul.py  timeseries.py
autosktime/ensembles/: builder.py  selection.py  singlebest.py  util.py
autosktime/evaluation/: __init__.py  abstract_evaluator.py  test_evaluator.py  train_evaluator.py
autosktime/metalearning/: __init__.py  kND.py  meta_base.py  prior.py
autosktime/metrics/: __init__.py  util.py
autosktime/pipeline/: util.py
autosktime/pipeline/components/: base.py  identity.py  index.py  reduction.py  util.py
autosktime/pipeline/templates/: __init__.py  base.py  nn_panel_regression.py  nn_regression.py  panel_regression.py  regression.py  univariate_endogenous.py  util.py
autosktime/sktime_/: _utilities.py
autosktime/smac/: acquisition.py  prior.py  smac_ac_facade.py
autosktime/util/: __init__.py  arg_types.py  backend.py  common.py  context.py  dask_single_thread_client.py  logging.yaml  logging_.py  plotting.py  singleton.py  stopwatch.py
docs/: conf.py  index.rst
scripts/: .gitignore  autocoevorul.py  execute_automl.py  lstm_forecasting.py  m4_benchmark.py  metadata_generation.py  performance_evaluation.py  plot_benchmark.py  remaining_useful_lifetime.py  remaning_useful_lifetime.py  remaning_useful_lifetime_score.py
scripts/benchmark/: _autogluon.py  _autopytorch.py  _autosktime.py  _autots.py  _deepar.py  _hyperts.py  _pyaf.py  _sktime.py  _tft.py  benchmark.py  compute_missing_metrics.py  evaluation.py  util.py
scripts/benchmark/results/: auto-pytorch-300.csv  auto-pytorch-60.csv  auto-sktime-300.csv  auto-sktime-60.csv  auto-sktime_multi_fidelity-300.csv  auto-sktime_multi_fidelity-60.csv  auto-sktime_templates-300.csv  auto-sktime_templates-60.csv  auto-sktime_warm_starting-300.csv  auto-sktime_warm_starting-60.csv  autogluon.csv  autogluon.hpo.csv  autots-300.csv  autots-300.default.csv  autots-60.csv  autots-60.default.csv  hyperts-300.csv  hyperts-60.csv  pmdarima.csv  prophet.csv  pyaf.csv  tft-300.csv  tft-60.csv
scripts/data/rul/: Data_No_10_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_1_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_20_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_22_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_25_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_27_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_37_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_38_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_3_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_41_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_45_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_48_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_59_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_60_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_62_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_68_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_70_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_76_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_83_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_84_ESREL22_Data_Mauthe_Braig_Zeiler.csv  Data_No_93_ESREL22_Data_Mauthe_Braig_Zeiler.csv
tests/: conftest.py  test_automl.py  test_skeleton.py
tests/evaluation/: test_execute_ta_func.py
tests/metalearning/: test_kND.py  test_meta_base.py  test_prior.py
tests/metrics/: metrics.py
tests/smac_/: test_prior.py
(+2254 files in other folders)
